--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,12 @@
             {% include social.html %}
           </div>
           {% endif %}
+
+            <!-- Boo's edit: custom addition to add social icons to navbar -->
+            <div class="navbar-brand social"> 
+              {% include social.html %}
+            </div>
+
           <!-- Navbar Toggle -->
           <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
